performance issues regarding git commit parsing